--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,12 @@ Package: comsldpsy
 Title: Data and analysis code for Visser et. al (submitted)
 Version: 0.1.0
 Authors@R:
-    person(given = "Janosch",
-           family = "Linkersdörfer",
-           role = c("aut", "cre"),
-           email = "linkersdoerfer@mailbox.org")
+    person(
+      given = "Janosch",
+      family = "Linkersdörfer",
+      role = c("aut", "cre"),
+      email = "linkersdoerfer@mailbox.org"
+    )
 Description: Provides data and analysis code for Visser et. al (submitted)
 License: MIT + file LICENSE
 ByteCompile: true
@@ -41,5 +43,7 @@ Imports:
     tidyr,
     UpSetR,
     zeallot
+Suggests:
+    visNetwork
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.0
